--- a/pyproject.toml
+++ b/pyproject.toml
@@ -191,6 +191,7 @@ select = [
     "T20", # flake8-print
     "PYI", # flake8-pyi
     "G",   # flake8-logging-format (enforce lazy logging)
+    "PLR", # pylint refactors (complexity, design patterns)
 ]
 ignore = [
     "E501",   # line too long (handled by black)
@@ -204,6 +205,11 @@ ignore = [
     "TC001", # typing imports should be in TYPE_CHECKING block
     "TC002", # typing imports should be in TYPE_CHECKING block
     "TC003", # typing imports should be in TYPE_CHECKING block
+    # PLR ignores - keep useful rules, ignore overly strict ones
+    "PLR2004", # magic-value-comparison (too noisy for constants like 0, 1, 2)
+    "PLR0912", # too-many-branches (legacy code, will refactor gradually)
+    "PLR0913", # too-many-arguments (common in PyQt signals/slots)
+    "PLR0915", # too-many-statements (legacy __init__ methods)
 ]
 
 # Per-file ignores for scripts and utilities
